--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,5 @@
 body {
   background-color: #ee3f54;
-  font-family: 'Courgette', cursive;
 }
 h1, h2, h3, h4, h5, h6, button {
   font-family: 'Courgette', cursive;
@@ -8,8 +7,29 @@ h1, h2, h3, h4, h5, h6, button {
 #logo-container .callout {
   background-color: #ee3f54;
   color: white;
+  margin: 0;
 }
 #social-container {
   background-color: #1c3643;
   font-size: 2em;
+}
+#menu-container {
+  background-color: #48a19d;
+}
+#menu-container li a { 
+  color: white;
+  font-family: 'Courgette', cursive;
+}
+#menu-container li a:hover{ 
+  color: #f6e15f;
+}
+#submenu-container {
+  border: 0;
+}
+#submenu-container li a {
+  background-color: #48a19d;
+  color: white;
+}
+#submenu-container li a:hover {
+  color: #f6e15f;
 }
