Added the main button's page 'Buy tickets' to attract people

--- a/css/app.css
+++ b/css/app.css
@@ -33,3 +33,12 @@ h1, h2, h3, h4, h5, h6, button {
 #submenu-container li a:hover {
   color: #f6e15f;
 }
+#tickets-action .callout {
+  background-color: #5e7eb7;
+  color: white;
+}
+#tickets-action .callout button {
+  border: 1px solid white;
+  color: white;
+  font-size: 2em;
+}
